Real cross browser fix for invisible iframe bug.

--- a/modules/ve2/ui/styles/ve.ui.Inspector.css
+++ b/modules/ve2/ui/styles/ve.ui.Inspector.css
@@ -1,6 +1,5 @@
 .es-inspector {
 	font-family: sans-serif;
-	display: none;
 	position: absolute;
 	border: solid 1px #cccccc;
 	-webkit-border-radius: 0.25em;
